[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/enemycinematica.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Cutscene.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/backgroundcinematica.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/charactercinematica.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/charactersudorcinematica.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Dialog.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sprites/enemycinematica2.png" type="Texture" id=7]
[ext_resource path="res://Sounds/BackgroundAsalto-8bit Syndrome _ 8bit Horror - COPYRIGHT FREE MUSIC (128 kbps).mp3" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Items.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=4]
resource_name = "ItemSelected"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Enemy2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Enemy2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 615, 1041 ), Vector2( 604, 354 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Enemy2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 2.5294, 2.5294, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Character:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 224, 379 ), Vector2( 639, 453 ), Vector2( 664, 437 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Character:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 6.31731, 6.31731, 4.00035 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CharacterSudor:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 316, 345 ), Vector2( 747, 466 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CharacterSudor:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 6.9, 6.9, 4.2055 ]
}

[sub_resource type="Animation" id=1]
resource_name = "KilledByDrogadicto"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 698, 1017 ), Vector2( 682, 401 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Enemy:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -3.27659, -3.27659, 3.5, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Character:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 224, 379 ), Vector2( 633, 428 ), Vector2( 633, 428 ), Vector2( 649, 399 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Character:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 6.31731, 6.31731, 7.7, 0.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CharacterSudor:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 316, 345 ), Vector2( 715, 421 ), Vector2( 728, 412 ), Vector2( 730, 497 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CharacterSudor:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.1, 6.9, 1.3 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Enemy2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Enemy:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 649, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Enemy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 698, 1017 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Enemy:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -3.27659 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Character:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 224, 379 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Character:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.31731 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CharacterSudor:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 316, 345 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CharacterSudor:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Enemy:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Enemy2:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Enemy2:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 604, 354 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Enemy2:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Cutscene" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ItemSelected = SubResource( 4 )
anims/KilledByDrogadicto = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 649, 360 )
scale = Vector2( 0.697222, 0.697222 )
texture = ExtResource( 3 )

[node name="Enemy" type="Sprite" parent="."]
visible = false
position = Vector2( 698, 1017 )
rotation = -0.0571873
scale = Vector2( 0.67963, 0.67963 )
texture = ExtResource( 1 )

[node name="Enemy2" type="Sprite" parent="."]
visible = false
position = Vector2( 604, 354 )
scale = Vector2( 0.729919, 0.729919 )
texture = ExtResource( 7 )

[node name="Character" type="Sprite" parent="."]
position = Vector2( 224, 379 )
rotation = 0.110258
scale = Vector2( 0.717593, 0.717593 )
texture = ExtResource( 4 )

[node name="CharacterSudor" type="Sprite" parent="."]
position = Vector2( 316, 345 )
scale = Vector2( 0.841667, 0.841667 )
texture = ExtResource( 5 )

[node name="Items" parent="." instance=ExtResource( 9 )]
visible = false

[node name="DialogBox" parent="." instance=ExtResource( 6 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="itemSelected" from="Items" to="." method="_on_ItemsCanvasLayer_itemSelected"]
[connection signal="finishIntro" from="DialogBox" to="." method="_on_DialogBox_finishIntro"]
[connection signal="next" from="DialogBox" to="." method="_on_DialogBox_next"]
